force-app/main/default/objects/UMB_Design_Option__c/UMB_Design_Option__c.object-meta.xml
<CustomObject>
    <label>UMB Design Option</label>
    <nameField>
        <label>Design Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UMB Design Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>