force-app/main/default/objects/UMB_Design_Option__c/fields/Features__c.field-meta.xml
<CustomField>
    <fullName>Features__c</fullName>
    <description>One feature per line. Rendered as bullet list on the design card.</description>
    <label>Features</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>