force-app/main/default/objects/UMB_Design_Option__c/fields/Is_Concept__c.field-meta.xml
<CustomField>
    <fullName>Is_Concept__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the rendering was generated without the customer&apos;s own backyard photo (a concept, not their actual yard).</description>
    <label>Is Concept</label>
    <type>Checkbox</type>
</CustomField>