force-app/main/default/objects/UMB_Design_Option__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Design Options</relationshipLabel>
    <relationshipName>Design_Options</relationshipName>
    <type>Lookup</type>
</CustomField>