force-app/main/default/objects/UMB_Design_Option__c/fields/Package_Label__c.field-meta.xml
<CustomField>
    <fullName>Package_Label__c</fullName>
    <label>Package Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>