force-app/main/default/objects/UMB_Design_Option__c/fields/Rendered_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Rendered_Image_URL__c</fullName>
    <description>URL of the Gemini-generated rendering of the customer&apos;s actual yard with this design applied.</description>
    <label>Rendered Image URL</label>
    <type>Url</type>
</CustomField>