force-app/main/default/objects/UMB_Design_Option__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>1 = Retreat, 2 = Entertainer, 3 = Signature. Controls card order.</description>
    <label>Sort Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>