force-app/main/default/objects/UMB_Design_Option__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retreat</fullName>
            </value>
            <value>
                <fullName>Entertainer</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>